[package]
name = "stomata"
version = "0.1.0"
authors = ["TechnoElf <technoelf@undertheprinter.com>"]
edition = "2018"

[dependencies]
argon2 = { version = "0.1.4", features = ["std"] }
base64 = "0.13.0"
config = "0.11.0"
mysql = { git = "https://github.com/TechnoElf/rust-mysql-simple", features = ["tls-rust"] }
openapi = { git = "https://github.com/softprops/openapi" }
rand_core = "0.6.2"
rocket = "0.4.7"
rocket_contrib = { version = "0.4.7", default-features = false, features = ["json"] }
serde = "1.0.125"
uuid = { version = "0.8.2", features = ["v4"] }
velcro = "0.5.3"
websocket = { version = "0.26.2", default_features = false, features = ["sync"] }
